--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>ProXimus</title>
 </head>
 <body>
-Here be the home of ProXimus 
+My Projects:<br>
+<a href="proximus/index.html">ProXimus</a>
 </body>
 </html>
