--- a/proximus/index.html
+++ b/proximus/index.html
@@ -1,24 +1,27 @@
 <html>
 <head>
-<title>ProXimus Home</title>
+<title>ProXimus</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><link rel="stylesheet" type="text/css" href="/css/cake.forms.css" media="all" /><link rel="stylesheet" type="text/css" href="/css/style.css" media="all" /></head>
 <body>
 <div id="header">
 
-<div id="title"><a href="/">ProXimus</a></div>
+<div id="title">ProXimus</div>
 
 <div id="slogan">Home of ProXimus</div>
 
 </div>
 
 <div id="nav">
-<a href="/">Locations</a><a href="/logs/searchlist">Logs</a><a href="/rules/search">Rule Tester</a> | <a href="/pages/admin">Administration</a> | <a href="/admins/changePassword/2">fiveoclock&#039;s Profile</a><a href="/admins/logout">Logout</a></div>
+<a href="https://github.com/fiveoclock/proximus/wiki">Documentation</a>
+<a href="https://github.com/fiveoclock/proximus/wiki/Screenshots">Screenshots</a>
+<a href="https://github.com/fiveoclock/proximus">Sourcecode</a> | 
+<a href="http://www.google.com">Logout</a></div>
 
 
 <div id="content">
 <div id="maincontent">
 <div class="admins form"> 
-<h2>Administration</h2> 
+<h2>Overview</h2> 
 Below you can find a list of elements you can administer in ProXimus.<br><br> 
  
 <div class="actions"> 
