--- a/proximus/index.html
+++ b/proximus/index.html
@@ -21,7 +21,8 @@
 <div id="content">
 <div id="maincontent">
 <div class="admins form"> 
-<h2>Overview</h2> 
+<h2>Overview</h2>
+<img src="images/screenie.png">
 Below you can find a list of elements you can administer in ProXimus.<br><br> 
  
 <div class="actions"> 
