--- a/proximus/index.html
+++ b/proximus/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>ProXimus</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><link rel="stylesheet" type="text/css" href="css/cake.forms.css" media="all" /><link rel="stylesheet" type="text/css" href="/css/style.css" media="all" /></head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><link rel="stylesheet" type="text/css" href="css/cake.forms.css" media="all" /><link rel="stylesheet" type="text/css" href="css/style.css" media="all" /></head>
 <body>
 <div id="header">
 
