--- a/proximus/index.html
+++ b/proximus/index.html
@@ -5,35 +5,36 @@
 <body>
 <div id="header">
 
-<div id="title">ProXimus</div>
+<img id=logo src="images/logo.png">
+<div id="title">
+ProXimus
+</div>
+<div id="slogan">Home </div>
 
-<div id="slogan">Home of ProXimus</div>
 
 </div>
 
 <div id="nav">
-<a href="https://github.com/fiveoclock/proximus/wiki">Documentation</a>
-<a href="https://github.com/fiveoclock/proximus/wiki/Screenshots">Screenshots</a>
-<a href="https://github.com/fiveoclock/proximus">Sourcecode</a> | 
+<a target="_blank" href="https://github.com/fiveoclock/proximus/wiki">Documentation</a>
+<a target="_blank" href="https://github.com/fiveoclock/proximus/wiki/Screenshots">Screenshots</a>
+<a target="_blank" href="https://github.com/fiveoclock/proximus">Sourcecode</a> | 
 <a href="http://www.google.com">Logout</a></div>
 
 
 <div id="content">
 <div id="maincontent">
 <div class="admins form"> 
-<h2>Overview</h2>
-<img src="images/screenie.png">
-Below you can find a list of elements you can administer in ProXimus.<br><br> 
+<h2>About</h2>
+ProXimus is an enterprise scale solution to manage access control for the Squid proxy server http://www.squid-cache.org/.<br><br>
+<img align=center border=1 src="images/screenie.png">
+<br>
+<br>
+
+<h2>More information</h2>
+For more information on ProXimus please visit the the <a href="https://github.com/fiveoclock/proximus/wiki">Wiki</a>
+hosted on Github.<br><br> 
  
-<div class="actions"> 
- 
-<h3> 
- 
-<a href="/locations/index">Locations</a><br><a href="/users/index">Users</a><br><a href="/noauth_rules/index">No-Auth rules</a><br><br><a href="/admins/index">Admin accounts</a><br><a href="/proxy_settings/index">Proxy settings</a><br><br><a href="/pages/about">About ProXimus / Documentation</a> 
-</h3> 
- 
-</div> 
- 
+
 </div> 
  
 
@@ -52,6 +53,7 @@ ProXimus-Admin
 </div>
 
 
+<br>
 <br>
 <br>
 </body>
