--- a/proximus/index.html
+++ b/proximus/index.html
@@ -25,14 +25,14 @@ ProXimus
 <div id="maincontent">
 <div class="admins form"> 
 <h2>About</h2>
-ProXimus is an enterprise scale solution to manage access control for the Squid proxy server http://www.squid-cache.org/.<br><br>
+ProXimus is an enterprise scale solution to manage access control for the <a target="_blank" href="http://www.squid-cache.org/">Squid</a> proxy server.<br><br>
 <img align=center border=1 src="images/screenie.png">
 <br>
 <br>
 
 <h2>More information</h2>
-For more information on ProXimus please visit the the <a href="https://github.com/fiveoclock/proximus/wiki">Wiki</a>
-hosted on Github.<br><br> 
+For more information on ProXimus please visit the the <a target="_blank" href="https://github.com/fiveoclock/proximus/wiki">Wiki</a>
+hosted on <a target="_blank" href="https://github.com/">github.com</a>.<br><br> 
  
 
 </div> 
